fix cart button not showing total items

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,7 +7,7 @@ $secondary-filter: invert(99%) sepia(0%) saturate(7500%) hue-rotate(101deg)
   brightness(108%) contrast(100%);
 $cool-shadow: 0 0 5px rgba(0, 0, 0, 0.5019607843);
 $universal-width: 700px;
-$header-height: 56px;
+$header-height-on-mobile: 56px;
 @mixin mainContent {
   margin: auto;
   max-width: $universal-width;
@@ -75,7 +75,7 @@ $header-height: 56px;
 .Toastify__toast-container {
   width: fit-content !important;
   .Toastify__toast {
-    min-height: $header-height;
+    min-height: $header-height-on-mobile;
   }
 }
 
